--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
                                     <div class="mb-5">
-                                        <h2 class="mb-4">Discover, Collaborate and Get your Data right with OpenMetaData</h2>
+                                        <h2 class="mb-4">Discover, Collaborate and Get your Data right with OpenMetadata</h2>
                                         <ul>
                                           <li><strong>Data Collaboration Workspace</strong> - for users to discover, and
                                          collaborate on data</li>
