open-metadata.org slack invite link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                             <i class="ms-2" data-feather="arrow-right"></i>
                                         </a>
                                         <a class="btn btn-lg btn-primary-soft text-primary fw-500"
-                                            href="https://communityinviter.com/apps/open-metadata/openmetadata">Join our
+                                            href="https://openmetadata.slack.com/join/shared_invite/zt-udl8ris3-Egq~YtJU_yJgJTtROo00dQ#/shared-invite/email">Join our
                                             Slack</a>
                                     </div>
                                 </div>
@@ -420,7 +420,7 @@
                                     </div> -->
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a
-                                                href="https://communityinviter.com/apps/open-metadata/openmetadata"
+                                                href="https://openmetadata.slack.com/join/shared_invite/zt-udl8ris3-Egq~YtJU_yJgJTtROo00dQ#/shared-invite/email"
                                                 target="_blank"><i class="fab fa-slack"></i> Slack</a></li>
                                         <li class="mb-2"><a href="https://github.com/open-metadata/openmetadata"
                                                 target="_blank"><i class="fab fa-github"></i> Github</a></li>
