updating images, content and added carousel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>OpenMetaData</title>
+    <title>OpenMetadata</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
@@ -59,9 +59,9 @@
                         <div class="container px-5">
                             <div class="row gx-5 align-items-center">
                                 <div class="col-lg-6" data-aos="fade-up">
-                                    <h1 class="page-header-ui-title">OpenMetadata</h1>
-                                    <p class="page-header-ui-text mb-5">Open Standard for Metadata, a Single place to Discover,
-                                      Collaborate and Get your data right.</p>
+                                    <h1 class="page-header-ui-title">Open Standard for Metadata</h1>
+                                    <p class="page-header-ui-text mb-5">A Single place to Discover, Collaborate and Get
+                                        your data right.</p>
                                     <div class="d-flex flex-column flex-sm-row">
                                         <a class="btn btn-lg btn-primary fw-500 me-sm-3 mb-3 mb-sm-0"
                                             href="https://docs.open-metadata.org">
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img
-                                        class="img-fluid" src="images/programming.svg" alt="..." />
+                                        class="img-fluid" src="images/home-section.png" alt="..." />
                                 </div>
                             </div>
                         </div>
@@ -87,53 +87,82 @@
                         </svg>
                     </div>
                 </header>
+
                 <section class="bg-light py-10" id="explore">
                     <div class="container px-5">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-indicators">
+                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                            data-bs-slide-to="0" class="active" aria-current="true"
+                                            aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                            data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    </div>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
                         <div class="row gx-5 align-items-center justify-content-center">
                             <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
                                 <div class="content-skewed content-skewed-right"><img
                                         class="content-skewed-item img-fluid shadow-lg rounded-3"
-                                        src="images/omd-landing-screen.png" /></div>
+                                        src="images/carousal-01.jpeg" /></div>
                             </div>
-                            <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
+                                                <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0"
+                                                    data-aos="fade-left">
                                 <div class="mb-5">
                                     <h2 class="mb-4">Open Standard for Metadata</h2>
                                     <ul>
-                                        <li><strong>Metadata Schema Specifications</strong> - defines core abstractions
-                                            and vocabulary
-                                            for metadata with Types, Entities, Relationships between entities</li>
-                                        <li><strong>Metadata APIs</strong> - for producing and consuming metadata</li>
-                                        <li><strong>Metadata Store</strong> - stores metadata graph that connects data
-                                            assets, user and tool generated metadata</li>
+                                                            <li><strong>Metadata Schema Specifications</strong> - Types,
+                                                                Entities, and
+                                                                Relationships</li>
+                                                            <li><strong>Metadata APIs</strong> - REST APIs for producing
+                                                                and consuming metadata</li>
+                                                            <li><strong>Metadata store</strong> - Metadata graph that
+                                                                connects all your
+                                                                metadata</li>
                                     </ul>
+                                                        <div class="text-center"><a class="btn btn-primary fw-500"
+                                                                href="http://sandbox.open-metadata.org/signin"
+                                                                target="_blank">Try our
+                                                                Sandbox</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <section class="bg-light py-10" id="explore">
-                        <div class="container px-5">
+                                        </div>
+                                        <div class="carousel-item">
                             <div class="row gx-5 align-items-center justify-content-center">
                                 <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
                                     <div class="content-skewed content-skewed-right"><img
                                             class="content-skewed-item img-fluid shadow-lg rounded-3"
-                                            src="images/omd-landing-screen.png" /></div>
+                                            src="images/carousal-02.jpeg" /></div>
                                 </div>
-                                <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
+                                                <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0"
+                                                    data-aos="fade-left">
                                     <div class="mb-5">
-                                        <h2 class="mb-4">Discover, Collaborate and Get your Data right with OpenMetadata</h2>
+                                                        <h2 class="mb-4">Discover and Collaborate on data with your team
+                                                        </h2>
                                         <ul>
-                                          <li><strong>Data Collaboration Workspace</strong> - for users to discover, and
-                                         collaborate on data</li>
-                                         <li><strong>Bots for Automation</strong> - to automate mundane data tasks</li>
+                                                            <li><strong>A single place for all your data</strong> -
+                                                                Discover, understand, and enrich</li>
+                                                            <li><strong>Data Collaboration Workspace</strong> - For
+                                                                teams to come together around data</li>
                                         </ul>
                                         <div class="text-center"><a class="btn btn-primary fw-500"
-                                                href="https://sandbox.open-metadata.org/signin" target="_blank">Try our
+                                                                href="http://sandbox.open-metadata.org/signin"
+                                                                target="_blank">Try our
                                                 Sandbox</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="svg-border-rounded text-white">
                         <!-- Rounded SVG Border-->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none"
@@ -147,7 +176,7 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8">
                                 <div class="text-center mb-10">
-                                    <h1>Documentation</h1>
+                                    <h2>Documentation</h2>
                                     <!-- <p class="lead">Our professional documentation includes usage instructions and other
                                         tips to help guide your development process as you build your project.</p> -->
                                 </div>
@@ -156,7 +185,7 @@
                         <div class="row gx-5">
                             <div class="col-lg-4 text-center mb-5">
                                 <!-- <div class="display-1 fw-700 text-gray-400">70+</div> -->
-                                <div class="h2">OpenMetadata APIs</div>
+                                <div class="h5">OpenMetadata APIs</div>
                                 <p>Learn about OpenMetadata Schema Specifications and Metadata APIs point. <br /><a
                                         href="https://docs.open-metadata.org/openmetadata-apis/schemas"
                                         target="_blank">Click
@@ -164,7 +193,7 @@
                             </div>
                             <div class="col-lg-4 text-center mb-5">
                                 <!-- <div class="display-1 fw-700 text-gray-400">35+</div> -->
-                                <div class="h2">Install OpenMetadata</div>
+                                <div class="h5">Install OpenMetadata</div>
                                 <p>Run using docker or install from source. <br /><a
                                         href="https://docs.open-metadata.org/install/run-openmetadata"
                                         target="_blank">Click
@@ -172,7 +201,7 @@
                             </div>
                             <div class="col-lg-4 text-center mb-5">
                                 <!-- <div class="display-1 fw-700 text-gray-400">100+</div> -->
-                                <div class="h2">Metadata Ingestion</div>
+                                <div class="h5">Metadata Ingestion</div>
                                 <p>Configure our readily available connectors to connect to various data stores.
                                     <br /><a href="https://docs.open-metadata.org/install/metadata-ingestion"
                                         target="_blank">Click
@@ -366,7 +395,7 @@
                         </div>
                         <div class="col-lg-9">
                             <div class="row gx-5">
-                                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0 invisible">
+                                <!-- <div class="col-lg-3 col-md-6 mb-5 mb-lg-0 invisible">
                                     <div class="text-uppercase-expanded text-xs mb-4">Product</div>
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a href="#!">Landing</a></li>
@@ -375,8 +404,8 @@
                                         <li class="mb-2"><a href="#!">Documentation</a></li>
                                         <li><a href="#!">Changelog</a></li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                                </div> -->
+                                <div class="col-lg-3 offset-lg-3 col-md-6 mb-5 mb-lg-0">
                                     <div class="text-uppercase-expanded text-xs mb-4">Docs</div>
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a href="https://docs.open-metadata.org/" target="_blank">What
@@ -392,7 +421,7 @@
                                                 target="_blank">Ingestion</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-md-6 mb-5 mb-md-0 invisible">
+                                <!-- <div class="col-lg-3 col-md-6 mb-5 mb-md-0 invisible">
                                     <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a href="#!">Utilities</a></li>
@@ -403,8 +432,8 @@
                                         <li class="mb-2"><a href="#!">Affiliates</a></li>
                                         <li><a href="#!">Updates</a></li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-3 col-md-6">
+                                </div> -->
+                                <div class="col-lg-3 offset-lg-3 col-md-6">
                                     <div class="text-uppercase-expanded text-xs mb-4">Community</div>
                                     <!-- <div class="icon-list-social mb-5">
                                         <a class="icon-list-social-link"
