updating mailing list email

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                                                 target="_blank"><i class="fab fa-github"></i> Github</a></li>
                                         <li class="mb-2"><a href="https://twitter.com/open_metadata" target="_blank"><i
                                                     class="fab fa-twitter"></i> Twitter</a></li>
-                                        <li><a href="mailto:dev@open-metadata.org"><i class="fas fa-envelope"></i>
+                                        <li><a href="mailto:openmetadata-user@googlegroups.com"><i class="fas fa-envelope"></i>
                                                 Mailing List</a></li>
                                     </ul>
                                 </div>
