updating mailing list url and adding missing comma

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <div class="row gx-5 align-items-center">
                                 <div class="col-lg-6" data-aos="fade-up">
                                     <h1 class="page-header-ui-title">Open Standard for Metadata</h1>
-                                    <p class="page-header-ui-text mb-5">A Single place to Discover, Collaborate and Get
+                                    <p class="page-header-ui-text mb-5">A Single place to Discover, Collaborate, and Get
                                         your data right.</p>
                                     <div class="d-flex flex-column flex-sm-row">
                                         <a class="btn btn-lg btn-primary fw-500 me-sm-3 mb-3 mb-sm-0"
@@ -455,7 +455,7 @@
                                                 target="_blank"><i class="fab fa-github"></i> Github</a></li>
                                         <li class="mb-2"><a href="https://twitter.com/open_metadata" target="_blank"><i
                                                     class="fab fa-twitter"></i> Twitter</a></li>
-                                        <li><a href="mailto:openmetadata-user@googlegroups.com"><i class="fas fa-envelope"></i>
+                                        <li><a href="https://groups.google.com/g/openmetadata-users"><i class="fas fa-envelope"></i>
                                                 Mailing List</a></li>
                                     </ul>
                                 </div>
