Adding Blog Post Card

--- a/index.html
+++ b/index.html
@@ -313,21 +313,19 @@
                     <div class="container px-5">
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8">
-                                <div class="text-center mb-10">
+                                <div class="text-center mb-5">
                                     <h2>Blog</h2>
-                                    <p class="lead">Blog Content will be here</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row gx-5 mb-5">
-                            <!-- <div class="col-lg-4 mb-5">
-                                <a class="card lift h-100" href="#">
+                            <div class="col-lg-4 mb-5 offset-lg-4">
+                                <a class="card lift h-100" href="https://blog.open-metadata.org/announcing-openmetadata-20399b816e60" target="_blank">
                                     <img class="card-img-top" src="images/blog01.jpg" />
                                     <div class="card-body">
                                         <h4 class="card-title mb-2">
-                                            Apache Pinot’s Graduation</h4>
-                                        <p class="card-text">We are pleased to announce that Apache Pinot has graduated
-                                            and is now a top-level Apache Software Foundation (ASF) project!</p>
+                                            Announcing OpenMetadata</h4>
+                                        <p class="card-text">Open-source project to supercharge your Metadata initiative</p>
                                     </div>
                                     <div
                                         class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
@@ -336,6 +334,7 @@
                                     </div>
                                 </a>
                             </div>
+                            <!-- 
                             <div class="col-lg-4 mb-5">
                                 <a class="card lift h-100" href="#">
                                     <img class="card-img-top" src="images/blog02.jpg" />
