Adding new blog card to index page

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             </div>
                         </div>
                         <div class="row gx-5 mb-5">
-                            <div class="col-lg-4 mb-5 offset-lg-4">
+                            <div class="col-lg-4 mb-5">
                                 <a class="card lift h-100" href="https://blog.open-metadata.org/announcing-openmetadata-20399b816e60" target="_blank">
                                     <img class="card-img-top" src="images/blog01.jpg" />
                                     <div class="card-body">
@@ -334,15 +334,13 @@
                                     </div>
                                 </a>
                             </div>
-                            <!-- 
                             <div class="col-lg-4 mb-5">
-                                <a class="card lift h-100" href="#">
+                                <a class="card lift h-100" href="https://blog.open-metadata.org/openmetadata-0-4-0-release-dashboards-topics-data-reliability-14e8672ae0f5" target="_blank">
                                     <img class="card-img-top" src="images/blog02.jpg" />
                                     <div class="card-body">
                                         <h4 class="card-title mb-2">
-                                            The Business Value</h4>
-                                        <p class="card-text">When one hears “decision maker,” it’s natural to think,
-                                            “C-suite,” or “executive.” But these days, we’re all decision-makers.</p>
+                                            OpenMetadata 0.4.0 Release</h4>
+                                        <p class="card-text">New feature releases which includes Dashboards, Topics, Data Reliability</p>
                                     </div>
                                     <div
                                         class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
@@ -351,21 +349,6 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-lg-4 mb-5">
-                                <a class="card lift h-100" href="#">
-                                    <img class="card-img-top" src="images/blog03.jpg" />
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-2">What is User-Facing Analytics?</h4>
-                                        <p class="card-text">Companies today are generating and collecting massive
-                                            amounts of data.</p>
-                                    </div>
-                                    <div
-                                        class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
-                                        <div class="small text-primary">Read more</div>
-                                        <div class="small text-primary"><i data-feather="arrow-right"></i></div>
-                                    </div>
-                                </a>
-                            </div> -->
                             <div class="text-center"><a class="btn btn-primary fw-500"
                                     href="http://blog.open-metadata.org/" target="_blank">Read
                                     All Blogs</a>
