updating image name to avoid caching issue

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             </div>
                             <div class="col-lg-4 mb-5">
                                 <a class="card lift h-100" href="https://blog.open-metadata.org/openmetadata-0-4-0-release-dashboards-topics-data-reliability-14e8672ae0f5" target="_blank">
-                                    <img class="card-img-top" src="images/blog02.jpg" />
+                                    <img class="card-img-top" src="images/v0.4.0.jpg" />
                                     <div class="card-body">
                                         <h4 class="card-title mb-2">
                                             OpenMetadata 0.4.0 Release</h4>
