Fix slack links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       </a>
                       <a
                         class="btn btn-md btn-primary-soft text-primary fw-500 me-sm-3"
-                        href="https://openmetadata.slack.com/join/shared_invite/zt-udl8ris3-Egq~YtJU_yJgJTtROo00dQ#/shared-invite/email"
+                        href="https://slack.open-metadata.org"
                         >Join our Slack</a
                       >
                       <a
@@ -711,7 +711,7 @@
                     <ul class="list-unstyled mb-0">
                       <li class="mb-2">
                         <a
-                          href="https://openmetadata.slack.com/join/shared_invite/zt-udl8ris3-Egq~YtJU_yJgJTtROo00dQ#/shared-invite/email"
+                          href="https://slack.open-metadata.org"
                           target="_blank"
                           ><i class="fab fa-slack"></i> Slack</a
                         >
