Adding Open graph mettags

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="description"
+      content="A Single place to Discover, Collaborate, and Get your data right"
+    />
+    <meta
+      property="og:title"
+      content="OpenMetadata - Open Standard for Metadata"
+    />
+    <meta
+      property="og:description"
+      content="A Single place to Discover, Collaborate, and Get your data right."
+    />
+    <meta property="og:image" content="images/favicon.png" />
     <title>OpenMetadata</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
@@ -126,7 +137,12 @@
                         <i class="ms-2" data-feather="arrow-right"></i>
                       </a>
                       <a
-                        class="btn btn-md btn-primary-soft text-primary fw-500 me-sm-3"
+                        class="
+                          btn btn-md btn-primary-soft
+                          text-primary
+                          fw-500
+                          me-sm-3
+                        "
                         href="https://slack.open-metadata.org"
                         >Join our Slack</a
                       >
@@ -508,7 +524,8 @@
                         OpenMetadata 0.5.0 Release is here
                       </h4>
                       <p class="card-text">
-                        Lineage, Pipelines, Complex Types, Data Profiler and so much more
+                        Lineage, Pipelines, Complex Types, Data Profiler and so
+                        much more
                       </p>
                     </div>
                     <div
@@ -534,13 +551,15 @@
                     href="https://blog.open-metadata.org/openmetadata-benchmarking-3120782f8a12"
                     target="_blank"
                   >
-                    <img class="card-img-top" src="images/Blog-Benchmarking.jpeg" />
+                    <img
+                      class="card-img-top"
+                      src="images/Blog-Benchmarking.jpeg"
+                    />
                     <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata Benchmarking
-                      </h4>
+                      <h4 class="card-title mb-2">OpenMetadata Benchmarking</h4>
                       <p class="card-text">
-                        See how the application responds with 1.8M entities (1.1M+ table, 550k dashboards, charts, 100k topics)
+                        See how the application responds with 1.8M entities
+                        (1.1M+ table, 550k dashboards, charts, 100k topics)
                       </p>
                     </div>
                     <div
