--- a/index.html
+++ b/index.html
@@ -515,6 +515,39 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-0-6-0-release-metadata-versioning-events-api-one-click-ingestion-and-more-4394c4f08e0b"
+                    target="_blank"
+                  >
+                    <img class="card-img-top" src="images/v0.5.0.jpeg" />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 0.6.0 Release
+                      </h4>
+                      <p class="card-text">
+                        Metadata Versioning, Events API, One-Click Ingestion,
+                        and more
+                      </p>
+                    </div>
+                    <div
+                      class="
+                        card-footer
+                        bg-transparent
+                        border-top
+                        d-flex
+                        align-items-center
+                        justify-content-between
+                      "
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <i data-feather="arrow-right"></i>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-5-0-1144a4000644"
                     target="_blank"
                   >
@@ -579,39 +612,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-4-0-release-dashboards-topics-data-reliability-14e8672ae0f5"
-                    target="_blank"
-                  >
-                    <img class="card-img-top" src="images/v0.4.0.jpg" />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.4.0 Release
-                      </h4>
-                      <p class="card-text">
-                        New feature releases which includes Dashboards, Topics,
-                        Data Reliability
-                      </p>
-                    </div>
-                    <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <i data-feather="arrow-right"></i>
-                      </div>
-                    </div>
-                  </a>
-                </div>
+
                 <div class="text-center">
                   <a
                     class="btn btn-primary fw-500"
