Adding blog image for 0.6.0 version.

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     href="https://blog.open-metadata.org/openmetadata-0-6-0-release-metadata-versioning-events-api-one-click-ingestion-and-more-4394c4f08e0b"
                     target="_blank"
                   >
-                    <img class="card-img-top" src="images/v0.5.0.jpeg" />
+                    <img class="card-img-top" src="images/v0.6.0.png" />
                     <div class="card-body">
                       <h4 class="card-title mb-2">
                         OpenMetadata 0.6.0 Release
