--- a/index.html
+++ b/index.html
@@ -515,6 +515,41 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/why-openmetadata-is-the-right-choice-for-you-59e329163cac"
+                    target="_blank"
+                  >
+                    <img class="card-img-top" src="images/why-om.png" />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        Why OpenMetadata is the Right Choice for you
+                      </h4>
+                      <p class="card-text">
+                        What generation of metadata systems is OpenMetadata? Are
+                        you pull-based, push-based, or hybrid? How is it
+                        different from other open-source and commercial
+                        solutions?
+                      </p>
+                    </div>
+                    <div
+                      class="
+                        card-footer
+                        bg-transparent
+                        border-top
+                        d-flex
+                        align-items-center
+                        justify-content-between
+                      "
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <i data-feather="arrow-right"></i>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-6-0-release-metadata-versioning-events-api-one-click-ingestion-and-more-4394c4f08e0b"
                     target="_blank"
                   >
@@ -578,41 +613,6 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-benchmarking-3120782f8a12"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="images/Blog-Benchmarking.jpeg"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">OpenMetadata Benchmarking</h4>
-                      <p class="card-text">
-                        See how the application responds with 1.8M entities
-                        (1.1M+ table, 550k dashboards, charts, 100k topics)
-                      </p>
-                    </div>
-                    <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <i data-feather="arrow-right"></i>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
                 <div class="text-center">
                   <a
                     class="btn btn-primary fw-500"
