Changed blog image.

--- a/index.html
+++ b/index.html
@@ -525,9 +525,7 @@
                       </h4>
                       <p class="card-text">
                         What generation of metadata systems is OpenMetadata? Are
-                        you pull-based, push-based, or hybrid? How is it
-                        different from other open-source and commercial
-                        solutions?
+                        you pull-based, push-based, or hybrid?
                       </p>
                     </div>
                     <div
