Adding version 0.7.0 blog and minor styling fixes.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                           text-primary
                           fw-500
                           me-sm-3
+                          mb-3 mb-sm-0
                         "
                         href="https://slack.open-metadata.org"
                         >Join our Slack</a
@@ -515,6 +516,39 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-0-7-0-release-9f741b8d5089"
+                    target="_blank"
+                  >
+                    <img class="card-img-top" src="images/v0.7.0.jpg" />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 0.7.0 Release
+                      </h4>
+                      <p class="card-text">
+                        Activity Feeds, DBT Integration, StorageLocation
+                        Integration, and more
+                      </p>
+                    </div>
+                    <div
+                      class="
+                        card-footer
+                        bg-transparent
+                        border-top
+                        d-flex
+                        align-items-center
+                        justify-content-between
+                      "
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <i data-feather="arrow-right"></i>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/why-openmetadata-is-the-right-choice-for-you-59e329163cac"
                     target="_blank"
                   >
@@ -559,39 +593,6 @@
                       <p class="card-text">
                         Metadata Versioning, Events API, One-Click Ingestion,
                         and more
-                      </p>
-                    </div>
-                    <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <i data-feather="arrow-right"></i>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-5-0-1144a4000644"
-                    target="_blank"
-                  >
-                    <img class="card-img-top" src="images/v0.5.0.jpeg" />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.5.0 Release is here
-                      </h4>
-                      <p class="card-text">
-                        Lineage, Pipelines, Complex Types, Data Profiler and so
-                        much more
                       </p>
                     </div>
                     <div
